Fixed width of info box in tab roll on mobile

--- a/sass/module/_tabroll.scss
+++ b/sass/module/_tabroll.scss
@@ -138,7 +138,7 @@ $tabroll-tab-color:                       $white;
 
       .info {
         position: relative;
-        width: 100%;
+        width: auto;
         right: 0;
         bottom: 0;
       }
